testsuite/tests/properties/dynvars/test.out
== default_default.lkt ==
Code generation was successful

== default_novar.lkt ==
Code generation was successful

== default_var.lkt ==
common_concrete_var.lkt:2:22: error: Requested set of dynamically bound variables is not consistent with the property to override: AbstractNode.prop
2 |     @with_dynvars(v) fun prop(): Int = 12
  |                      ^^^^^^^^^^^^^^^^^^^^


== novar_default.lkt ==
Code generation was successful

== novar_novar.lkt ==
Code generation was successful

== novar_var.lkt ==
common_concrete_var.lkt:2:22: error: Requested set of dynamically bound variables is not consistent with the property to override: AbstractNode.prop
2 |     @with_dynvars(v) fun prop(): Int = 12
  |                      ^^^^^^^^^^^^^^^^^^^^


== var_default.lkt ==
Code generation was successful

== var_novar.lkt ==
common_concrete_novar.lkt:2:21: error: Requested set of dynamically bound variables is not consistent with the property to override: AbstractNode.prop
2 |     @with_dynvars() fun prop(): Int = 12
  |                     ^^^^^^^^^^^^^^^^^^^^


== var_var.lkt ==
Code generation was successful

lkt_compile: Done
